--- a/main.tex
+++ b/main.tex
@@ -96,7 +96,7 @@
 % the following line and view the file it refers to: 
 %\input{a-editfoot}
 
-\title{Welcome to XYZ Programme}
+\title{HOLAAAAAAAAAAe}
 %\title{} % An alternative to the previous line
 
 % In the case of the signature, some alternatives are:
