Agregar logo y formato para carta de patrocionio :) con Leidy

--- a/a-editfoot.tex
+++ b/a-editfoot.tex
@@ -41,9 +41,9 @@
 % The default Finnish footer texts from 
 % "aletter.cls": 
 %
-\enPostHead{Postal address:}
-\enVisitHead{Visiting address:}
-\enUniversity{Aalto University}
+\enPostHead{Correo electr\'onico:}
+\enVisitHead{Direcci\'on:}
+\enUniversity{Grupo GLUD}
 %
 \fiPostHead{Postiosoite:}
 \fiVisitHead{K\"{a}yntiosoite:}
