--- a/main.tex
+++ b/main.tex
@@ -28,7 +28,7 @@
 \usepackage[T1]{fontenc}
 
 % Choose one of the supported texts for the Aalto logo:
-\logoseries{Aalto} % "Aalto University" [the default] 
+\logoseries{logog2} % "Aalto University" [the default] 
 %\logoseries{Aalto_SST} 
 
 % Choose one of the Aalto logo variants: 
@@ -43,16 +43,16 @@
 %\fixlogo{9} % yellow ?
 %\varylogo   % pseudorandom, varies page-by-page
 
-\headtitle{Head Title}
-\headsubtitle{Head Subtitle}
+\headtitle{Grupo GLUD}
+\headsubtitle{Universidad Distrital Francisco Jos\'e de Caldas}
 \date{\today}
 %\hidepagenumbers
 
 % On the footer text definitions:
 % - some Aalto-wide definitions are in "aletter.cls"
 %   and thus not visible here 
-\enSchool{School of Business}
-\enDepartment{Department of Economics}
+\enSchool{Universidad Distrital}
+\enDepartment{Facultad de Ingenier\'ia}
 \enPerson{Ph.D. student Artturi Björk}
 \fiSchool{Kauppakorkeakoulu}
 \fiDepartment{Taloustieteen laitos}
@@ -101,7 +101,7 @@
 
 % In the case of the signature, some alternatives are:
 % (A) A simple signature:
-\signature{Artturi Björk\\Ph.D. Candidate}
+\signature{Laydi Viviana Bautista\\Directora Grupo GNU Linux Universidad Distrital FJC}
 % (B) Even extensive sender information can be included 
 % here (especially if it is not included in the footer): 
 %\signature{Dr.~Alice Allen\\
@@ -125,141 +125,14 @@
 \renewcommand*{\makecopy}[2]{
 \begin{letter}{#2}
 \opening{#1}
-
-This is the first paragraph of this sample \emph{letter}.
-To learn some more, do visit 
-\url{http://www.domain.com}.\footnote{%
-Etiam ultrices tempus nibh, a porttitor nisi malesuada 
-convallis. Cum sociis natoque penatibus et magnis dis 
-parturient montes, nascetur ridiculus mus. Cras nec 
-nulla ac tellus rutrum condimentum. Nullam placerat, 
-dolor a ultricies blandit, neque elit fringilla arcu, 
-a dignissim ipsum urna non magna. Cras sed tellus lorem. 
-Nunc risus leo, mattis ac malesuada id, adipiscing ac 
-massa. Integer id lorem arcu.} 
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-Duis non lectus est. Ut hendrerit imperdiet massa at 
-rutrum. Etiam ligula nibh, rutrum sed fermentum dapibus, 
-eleifend eget massa. Proin viverra, justo quis auctor 
-viverra, mi eros tristique justo, quis tincidunt libero 
-lectus id tortor. Aliquam in odio mi, et egestas augue. 
-Quisque a justo a risus blandit feugiat eget non leo. 
-Nam sit amet velit diam, at tincidunt lectus. Aliquam 
-erat volutpat. Sed blandit, nibh eget tincidunt aliquam,
-diam enim tristique nisl, ac porttitor nisi ligula ut 
-leo. 
-
-Aenean id lacus nulla, sit amet molestie mi. Vivamus at arcu 
-nec lectus egestas gravida. Duis tempor lobortis gravida. 
-Nullam quis sollicitudin odio. Aenean aliquam interdum tortor 
-vel gravida. Vivamus sollicitudin, ligula quis consequat 
-congue, urna elit dignissim mauris, a tincidunt elit augue in 
-arcu. Pellentesque arcu diam, rhoncus in ultricies sit amet, 
-sollicitudin nec lacus. Sed ac magna lectus, ac tristique odio. 
-Aliquam euismod vehicula porta.
-
-Nulla facilisi. Aenean ac est eget nibh sollicitudin aliquam. 
-Duis pulvinar, lectus id bibendum ultrices, sapien metus 
-blandit ipsum, eu eleifend felis dui quis leo. Donec vitae 
-dolor ut leo rutrum viverra et ac augue. Sed vel metus dui, in 
-consequat arcu. Pellentesque vel risus ut velit sollicitudin 
-vehicula quis in nibh. Donec facilisis odio enim. Cum sociis 
-natoque penatibus et magnis dis parturient montes, nascetur 
-ridiculus mus. Nunc vehicula arcu a lectus auctor semper. 
-Donec bibendum rutrum elementum. Phasellus bibendum eros quam, 
-a viverra velit. 
-
-Morbi pulvinar, metus in ornare auctor, velit dui fringilla 
-turpis, sit amet volutpat sapien turpis et metus. Aenean 
-vehicula, odio scelerisque condimentum tincidunt, tortor erat 
-pharetra nibh, id ullamcorper mi felis et leo. Nullam sem 
-odio, pellentesque a lacinia sed, fermentum eu ligula. Proin 
-egestas, justo ac interdum iaculis, lectus ante porta libero, 
-sit amet fringilla elit lectus vel ante. Pellentesque habitant 
-morbi tristique senectus\footnote{%
-Cum sociis natoque penatibus et magnis dis 
-parturient montes.} 
-et netus et malesuada fames ac turpis 
-egestas. Quisque facilisis magna ut lorem sollicitudin 
-faucibus.\footnote{%
-Cras nec nulla ac tellus rutrum condimentum.}  
-Nunc et pretium enim. Nam vitae turpis ut tellus 
-faucibus consectetur.
-
-\begin{compactitem}
-\item Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-\item Fusce convallis scelerisque neque, a suscipit dui 
-consequat sit amet.
-\item Vivamus vitae lacus libero, non vulputate nunc.
-\item Quisque eu nisl velit, non posuere ipsum.
-\end{compactitem}
-
-Maecenas sapien velit, venenatis non suscipit vel, ornare non 
-nunc. Ut volutpat ultricies convallis. Nam sapien libero, 
-sagittis id viverra ullamcorper, volutpat at urna. Duis nec 
-ligula purus, in dignissim dolor. Aliquam erat volutpat. 
-Nullam ut dui risus, nec ultrices ante. Nunc vestibulum 
-facilisis eros id ornare. Nulla facilisi. Etiam auctor 
-ultricies velit eget tristique. Integer in nibh eget elit 
-placerat porta. Vestibulum id quam quis nunc pellentesque 
-faucibus at ut purus. Nullam laoreet faucibus felis, luctus 
-facilisis diam sagittis sed. Integer et porta risus. Morbi ut 
-velit est, sit amet imperdiet odio.
-
-Fusce tortor odio, imperdiet interdum scelerisque et, 
-sollicitudin ut dui. Nulla id tortor nibh. Donec faucibus 
-bibendum sem, fermentum commodo magna pulvinar quis. Integer 
-lobortis justo quis justo pharetra sed placerat nibh interdum. 
-Quisque suscipit lobortis sapien vel rutrum. Maecenas quis 
-ante purus. Aliquam nec ligula eu tellus tempor ultrices at 
-nec libero. Maecenas auctor aliquam luctus. Sed volutpat nulla 
-at risus ultrices tincidunt. Fusce at nisi risus, sit amet 
-consequat neque. Morbi at metus urna, nec dictum nisi. Aliquam 
-non lacus quam, ut venenatis enim.
-
-Pellentesque et volutpat sapien. Aenean ante risus, volutpat
- vel tincidunt in, molestie sit amet dolor. Duis viverra 
-blandit velit, et dictum purus euismod nec. Ut urna nulla, 
-rutrum ut mattis eu, tempor blandit mi. Ut non posuere enim. 
-Aenean sapien purus, convallis eget consectetur non, 
-adipiscing at enim. Duis rhoncus fringilla nisi et mattis. 
-Duis purus libero, eleifend non lacinia ut, gravida sed 
-tellus. Donec in magna nec leo venenatis egestas. Donec 
-ultrices pharetra placerat. Vivamus congue tempus tincidunt. 
-Donec suscipit laoreet dolor, sit amet rhoncus risus 
-sollicitudin ac. Sed velit mi, commodo eu suscipit et, 
-vulputate ornare lacus. In non turpis id dui venenatis 
-dapibus. Vestibulum sodales lectus non tellus feugiat posuere. 
-Quisque pellentesque fermentum neque et hendrerit. Mauris 
-vestibulum, risus non lacinia posuere, lacus augue molestie 
-nisl, a cursus lectus dolor eget augue. Suspendisse varius 
-ultricies rhoncus.
-
-Proin sed sapien in arcu vestibulum egestas. Donec velit 
-ipsum, rhoncus eget iaculis ut, sagittis id enim. Aenean 
-dictum hendrerit arcu et aliquet. Sed nibh sapien, malesuada 
-at malesuada a, ultrices vel velit. Morbi ullamcorper mauris 
-nec lacus auctor interdum. Aenean vehicula ipsum id quam 
-vestibulum congue. Nam in arcu sit amet dolor molestie 
-bibendum. Sed accumsan, augue quis venenatis euismod, augue 
-urna consequat nisl, faucibus scelerisque nunc ipsum vitae 
-libero. Duis at justo varius mauris fermentum commodo eget sit 
-amet mi. In vitae vestibulum nulla. Curabitur pharetra 
-condimentum eros, et elementum ipsum consectetur id. Aenean 
-congue libero sit amet arcu ultricies iaculis. In vulputate 
-elit sed augue rutrum feugiat. Etiam lorem velit, dapibus vel
-dictum sit amet, venenatis posuere nisi. Integer blandit 
-hendrerit auctor. In nec velit sem, sit amet interdum risus. 
-Phasellus vulputate massa at nulla sodales a aliquam orci 
-dictum. Integer tortor diam, luctus id suscipit at, 
-scelerisque non arcu. Pellentesque fermentum consequat elit, 
-quis ultricies nunc posuere pulvinar. Praesent adipiscing 
-lacus sit amet magna.
+\textbf{REF: Solicitud patrocinio para la Semana Linux XVI Universidad Distrital FJC.}
+% -- Espacio para contenido
+\input{contenido.tex}
+%\input{contenido2.tex}
 
 \vspace*{0mm} % Extra vspace between text and greeting 
 %\vspace{-8mm}\closing{} % An alternative closing
-\closing{Best Regards,
+\closing{Gracias,
 \vspace{0mm} % Extra vspace between greeting and signature
 }
 \vspace*{0mm} % Extra vspace after signature
@@ -271,7 +144,7 @@ lacus sit amet magna.
 } % End of the (re-)definition of "\makecopy" 
 
 % Having multiple "\makecopy" instances produces multiple letters:
-\makecopy{Dear Teemu,}{Dr. Teemu Teekkari\\Jämeräntaival 99 A 1\\02150 Espoo}
+\makecopy{Ingeniero,}{Nombre\\Direcci\'on\\Dato Adicional}
 %\makecopy{Dear Tiina,}{Dr. Tiina Teekkari\\Jämeräntaival 99 A 1\\02150 Espoo}
 
 % A-AddrBook: To experiment with some higher-level commands
