Agregar más formatos de docuemntos para SLUD

--- a/main.tex
+++ b/main.tex
@@ -43,7 +43,7 @@
 %\fixlogo{9} % yellow ?
 %\varylogo   % pseudorandom, varies page-by-page
 
-\headtitle{Grupo GLUD}
+\headtitle{XVI Semana Linux SLUD  2019}
 \headsubtitle{Universidad Distrital Francisco Jos\'e de Caldas}
 \date{\today}
 %\hidepagenumbers
@@ -53,7 +53,7 @@
 %   and thus not visible here 
 \enSchool{Universidad Distrital}
 \enDepartment{Facultad de Ingenier\'ia}
-\enPerson{Ph.D. student Artturi Björk}
+\enPerson{}
 \fiSchool{Kauppakorkeakoulu}
 \fiDepartment{Taloustieteen laitos}
 \fiPerson{Tohtorikoulutettava Artturi Björk}
@@ -64,16 +64,16 @@
 %   \<xy>Dept<Abc> calls even \<xy>Pers<Abc>
 % - therefore, the definitions should occur in the 
 %   following order: Univ -> Schl -> Dept -> Pers
-\enDeptPostA{P.O.~Box 21240}
-\enDeptVisitA{Arkadiankatu 7}
-\enDeptVisitB{Helsinki, Finland}
-\enPersTel{Tel +358 50 3707121}
+\enDeptPostA{P.O.}
+\enDeptVisitA{Sede Ingenieria}
+\enDeptVisitB{Bogota, Colombia}
+\enPersTel{Tel +57 301 4513084}
 \enDeptFax{}
 \enPersFax{}
-\enSchlWeb{biz.aalto.fi/en}
-\enDeptWeb{economics.aalto.fi/en}
-\enPersWeb{https://sites.google.com/site/artturibjork}
-\enPersEmail{artturi.bjork@gmail.com}
+\enSchlWeb{https://glud.org}
+\enDeptWeb{https://glud.org}
+\enPersWeb{https://glud.org}
+\enPersEmail{glud@udistrital.edu.co}
 %
 \fiDeptPostA{PL 21240}
 \fiDeptVisitA{Arkadiankatu 7}
@@ -96,7 +96,7 @@
 % the following line and view the file it refers to: 
 %\input{a-editfoot}
 
-\title{HOLAAAAAAAAAAe}
+\title{...}
 %\title{} % An alternative to the previous line
 
 % In the case of the signature, some alternatives are:
@@ -125,14 +125,21 @@
 \renewcommand*{\makecopy}[2]{
 \begin{letter}{#2}
 \opening{#1}
-\textbf{REF: Solicitud patrocinio para la Semana Linux XVI Universidad Distrital FJC.}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
 % -- Espacio para contenido
-\input{contenido.tex}
-%\input{contenido2.tex}
+
+
+%%%%%%%%%Patrocinio 
+\input{patrocinios/solicitud_patrocinio.tex}
+%\input{invitacion_conferencista.tex}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
 
 \vspace*{0mm} % Extra vspace between text and greeting 
 %\vspace{-8mm}\closing{} % An alternative closing
-\closing{Gracias,
+\closing{De antemano, Gracias,
 \vspace{0mm} % Extra vspace between greeting and signature
 }
 \vspace*{0mm} % Extra vspace after signature
