--- a/patrocinios/solicitud_patrocinio.tex
+++ b/patrocinios/solicitud_patrocinio.tex
@@ -1,13 +1,15 @@
 
 \\
 
-Como comunidad, nos contactamos con ustedes con el objetivo de exponer la solicitud de patrocinio a su compañía, el próximo % Completar fecha
+Como comunidad, contactamos con ustedes, con el objetivo de exponer la solicitud de patrocinio a su compañía, el próximo % Completar fecha
 daremos inicio a la \textit{XVI Semana Linux} de la Universidad Distrital Francisco Jos\'e de Caldas.
 
 \\
 La Semana Linux es un evento anual de visibilidad nacional, organizado por el \textit{Grupo GNU Linux de la Universidad Distrital} (GLUD), en el cual se da a conocer el Software Libre y sus ventajas para el progreso tecnológico de la sociedad, allí convergen estudiantes, profesores, expertos y usuarios finales interesados en familiarizarse con el uso del Software Libre y su filosofía.
 
 \\
+\textbf{REF: Solicitud patrocinio para la Semana Linux XVI Universidad Distrital FJC.}
+
 La temática de la Semana Linux para este año es \textit{Inteligencia Artificial}, durante toda la semana se darán conferencias, talleres y actividades acerca de diferentes temas enfocados a promover la tecnología, software, cultura y ciencia libre.
 
 \\
